# bevy_editor_iris

./: .gitignore  Cargo.toml  README.md  certificate.der
.cargo/: config.toml
crates/bevy_editor_iris_common/: Cargo.toml
crates/bevy_editor_iris_common/src/: asynchronous.rs  error.rs  interface.rs  lib.rs  macros.rs  message.rs  registry.rs  serde.rs  systems.rs
crates/bevy_editor_iris_common/src/message/: distributor.rs  messages.rs  mod.rs
crates/bevy_editor_iris_derive/: Cargo.toml
crates/bevy_editor_iris_derive/src/: lib.rs
crates/bevy_editor_iris_editor/: Cargo.toml
crates/bevy_editor_iris_editor/src/: lib.rs
crates/bevy_editor_iris_editor/src/server/: mod.rs  resources.rs  systems.rs
crates/bevy_editor_iris_editor/src/tabs/: inspector.rs  mod.rs  resources.rs
crates/bevy_editor_iris_editor/src/tabs/inspector/: messages.rs  mod.rs  resources.rs  systems.rs  tab.rs
crates/bevy_editor_iris_editor/src/ui/: mod.rs  systems.rs
crates/bevy_editor_iris_plugin/: Cargo.toml
crates/bevy_editor_iris_plugin/src/: lib.rs
crates/bevy_editor_iris_plugin/src/client/: interface.rs  mod.rs  systems.rs
crates/bevy_editor_iris_plugin/src/tabs/: inspector.rs  mod.rs
crates/bevy_mod_ouroboros_derive/: Cargo.toml
crates/bevy_mod_ouroboros_derive/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: asynchronous.rs  lib.rs  serde.rs  systems.rs
crates/common/src/message/: distributor.rs  messages.rs  mod.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs
crates/editor/src/server/: mod.rs  resources.rs  systems.rs
crates/editor/src/tabs/: inspector.rs  mod.rs  resources.rs
crates/editor/src/ui/: mod.rs  systems.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/plugin/src/client/: interface.rs  mod.rs  systems.rs
crates/plugin/src/tabs/: inspector.rs  mod.rs
src/: lib.rs
src/common/: asynchronous.rs  interface.rs  message.rs  messages.rs  mod.rs  serde.rs  systems.rs
src/common/message/: distributor.rs  messages.rs  mod.rs
src/editor/: async.rs  mod.rs  plugin.rs  systems.rs
src/editor/server/: mod.rs  resources.rs  systems.rs
src/editor/server/resources/: client_interface.rs  mod.rs
src/editor/tabs/: inspector.rs  mod.rs  resources.rs
src/editor/ui/: mod.rs  systems.rs
src/plugin/: async.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/plugin/client/: interface.rs  mod.rs  resources.rs  systems.rs
src/plugin/tabs/: inspector.rs  mod.rs
