[package]
name = "bevy_mod_ouroboros"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy_mod_ouroboros_derive]
path = "crates/bevy_mod_ouroboros_derive"

[dependencies.ouroboros_common]
path = "crates/common"

[dependencies.ouroboros_editor]
path = "crates/editor"

[dependencies.ouroboros_plugin]
path = "crates/plugin"

[dependencies]
bevy = "0.7"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3