[package]
name = "bevy_editor_iris"
description = "A networked editor for bevy engine"
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.editor]
path = "crates/bevy_editor_iris_editor"
package = "bevy_editor_iris_editor"
version = "0.1.0"

[dependencies.plugin]
path = "crates/bevy_editor_iris_plugin"
package = "bevy_editor_iris_plugin"
version = "0.1.0"

[dependencies]
bevy = "0.7"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3