[package]
name = "bevy_editor_iris_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy_editor_iris_derive]
# path = "../bevy_editor_iris_derive"
version = "0.1"

[dependencies]
bevy = "0.7.0"
futures-util = "0.3.21"
quinn = "0.8.3"
rcgen = "0.9.2"
rustls = "0.20.6"
serde = "1.0.137"
serde_yaml = "0.8.24"
thiserror = "1.0.31"
tokio = "1.19.2"