[package]
name = "bevy_editor_iris_derive"
description = "Macros for bevy_editor_iris"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.18"
syn = "1.0.96"
proc-macro2 = "1.0.39"

[lib]
proc-macro = true